#2.2 Display users and Products in the admin interface

--- a/front-end/src/components/AdminPages/productList/productList.css
+++ b/front-end/src/components/AdminPages/productList/productList.css
@@ -1,9 +1,9 @@
 .productList{
   position: absolute;
  top: 10%;
- left: 20%;
+ left: 23%;
  width: 75%;
- height: 90vh;
+ height: 65%;
 }
 
 .productListItem{
