--- a/front-end/src/components/AdminPages/userList/userList.css
+++ b/front-end/src/components/AdminPages/userList/userList.css
@@ -1,9 +1,9 @@
 .userList {
  position: absolute;
  top: 10%;
- left: 20%;
+ left: 23%;
  width: 75%;
- height: 90vh;
+ height: 65%;
 }
 
 .userListUser {
