--- a/front-end/src/components/AdminPages/addProduct/addForm.css
+++ b/front-end/src/components/AdminPages/addProduct/addForm.css
@@ -1,11 +1,9 @@
-.FormContainer{
-position: absolute;
-width:70%;
-height: auto;
-top: 20%;
-left: 10%;
-border-radius: 10px;
-box-shadow: 0px 5px 10px rgba(179, 178, 178, 0.849);
-padding: 10px;
-border: 1px solid rgba(179, 178, 178, 0.849);
+.FormContainer {
+  position: relative;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(179, 178, 178, 0.849);
+  padding: 10px;
+  border: 1px solid rgba(179, 178, 178, 0.849);
 }
