--- a/ecommerce-client-side/src/App.css
+++ b/ecommerce-client-side/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +9,8 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
   font-family: "Varela Round";
   background-color: white !important;
 }
@@ -27,7 +31,7 @@ body {
 .welcome-section {
   height: 600px;
   position: relative;
-  background: linear-gradient(to bottom, #212529, white);
+  background: linear-gradient(to bottom, #24262b, white);
 }
 .welcome-section h1 {
   color: white;
@@ -112,9 +116,4 @@ section {
   height: 500px;
   background-image: url("https://ik.imagekit.io/67kaqcc3g62/pexels-fariborz-mp-10097388_0J2dnfd-U.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1646825038704");
   background-size: cover;
-}
-@media (max-width: 767px) {
-  .info-company {
-    flex-direction: "column";
-  }
 }
