--- a/front-end/src/components/AdminComponents/sidebar/sidebar.css
+++ b/front-end/src/components/AdminComponents/sidebar/sidebar.css
@@ -1,10 +1,9 @@
 .sidebar {
-
-  height: calc(100vh - 50px);
-  background-color: rgb(251, 251, 255);
-  position: absolute;
-  top: 35px;
-  width: 20%;
+  background-color: #3f51b5;
+  position: relative;
+  top: 7%;
+  left: 0%;
+  box-shadow: 0px 0px 5px black;
 }
 
 .sidebarWrapper {
@@ -18,7 +17,7 @@
 
 .sidebarTitle {
   font-size: 13px;
-  color: rgb(187, 186, 186);
+  color: white;
 }
 
 .sidebarList {
@@ -32,14 +31,18 @@
   display: flex;
   align-items: center;
   border-radius: 10px;
+  transition: 0.2s ease-in-out;
+  color: white;
 }
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
-  background-color: rgb(240, 240, 255);
+  transform: scale(1.3);
+  transition: 0.2s ease-in-out;
 }
 
-.sidebarIcon{
-    margin-right: 5px;
-    font-size: 20px !important;
+.sidebarIcon {
+  margin-right: 5px;
+
+  font-size: 20px !important;
 }
