--- a/front-end/src/components/AdminComponents/topbar/topbar.css
+++ b/front-end/src/components/AdminComponents/topbar/topbar.css
@@ -1,10 +1,11 @@
 .topbar {
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: #3f51b5;
   position: absolute;
   top: 0;
   z-index: 999;
+  box-shadow: 0px 0px 5px black;
 }
 
 .topbarWrapper {
@@ -18,13 +19,13 @@
 .logo {
   font-weight: bold;
   font-size: 30px;
-  color: darkblue;
+  color: white;
   cursor: pointer;
 }
 
-.topRight{
-    display: flex;
-    align-items: center;
+.topRight {
+  display: flex;
+  align-items: center;
 }
 
 .topbarIconContainer {
@@ -33,25 +34,37 @@
   margin-right: 10px;
   color: #555;
 }
-
-.topIconBadge{
-    width: 15px;
-    height: 15px;
-    position: absolute;
-    top: -5px;
-    right: 0px;
-    background-color: red;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
+.MuiSvgIcon-root {
+  fill: white !important;
+}
+.topIconBadge {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: -5px;
+  right: 0px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
 }
 
-.topAvatar{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
+.topAvatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.nav-link {
+  color: white;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+.nav-link:hover {
+  transform: scale(1.2);
+  color: white;
+  transition: 0.2s ease-in-out;
 }
