--- a/front-end/src/components/AdminPages/productList/productList.css
+++ b/front-end/src/components/AdminPages/productList/productList.css
@@ -1,35 +1,32 @@
-.productList{
-  position: absolute;
- top: 10%;
- left: 23%;
- width: 75%;
- height: 65%;
+.productList {
+  width: 100%;
+  margin: 5%;
 }
 
-.productListItem{
-    display: flex;
-    align-items: center;
+.productListItem {
+  display: flex;
+  align-items: center;
 }
 
 .productListImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-
-.productListEdit{
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: #3bb077;
-    color: white;
-    cursor: pointer;
-    margin-right: 20px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
 }
 
-.productListDelete{
-    color: red;
-    cursor: pointer;
+.productListEdit {
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: #3bb077;
+  color: white;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.productListDelete {
+  color: red;
+  cursor: pointer;
 }
