--- a/front-end/src/components/AdminPages/userList/userList.css
+++ b/front-end/src/components/AdminPages/userList/userList.css
@@ -1,9 +1,6 @@
 .userList {
- position: absolute;
- top: 10%;
- left: 23%;
- width: 75%;
- height: 65%;
+  width: 100%;
+  margin: 5%;
 }
 
 .userListUser {
@@ -19,17 +16,17 @@
   margin-right: 10px;
 }
 
-.userListEdit{
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: #3bb077;
-    color: white;
-    cursor: pointer;
-    margin-right: 20px;
+.userListEdit {
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: #3bb077;
+  color: white;
+  cursor: pointer;
+  margin-right: 20px;
 }
 
-.userListDelete{
-    color: red;
-    cursor: pointer;
+.userListDelete {
+  color: red;
+  cursor: pointer;
 }
